--- a/main.bib
+++ b/main.bib
@@ -41,7 +41,7 @@
 @Preamble{ " \newcommand{\noop}[1]{} " }
 
 
-@misc{2016jdox.rept......,
+@misc{jwstjdoc,
   title        = {{JWST User Documentation (JDox)}},
   keywords     = {Space Telescope Science Institute, STScI, James Webb Space Telescope, JWST},
   howpublished = {JWST User Documentation Website},
@@ -652,7 +652,7 @@
   organization = {IEEE}
 }
 
-@software{The_HDF_Group_Hierarchical_Data_Format,
+@misc{The_HDF_Group_Hierarchical_Data_Format,
   author = {{The HDF Group}},
   title  = {{Hierarchical Data Format, version 5}},
   url    = {https://github.com/HDFGroup/hdf5},
@@ -808,7 +808,7 @@
   organization={SPIE}
 }
 
-@innerproceedings{kawamuraterahertz,
+@inproceedings{kawamuraterahertz,
   title={A terahertz superconducting receiver instrumented on a low power space cryocooler},
   author={Kawamura, Jonathan and Stone, Kristjan and Burton, Lauren and Larson, Melora and Kloosterman, Jenna and Young, Joseph},
   year={2015},
@@ -816,7 +816,7 @@
   organization={NRAO}
 }
 
-@software{reback2020pandas,
+@misc{reback2020pandas,
     author       = {The pandas development team},
     title        = {pandas-dev/pandas: Pandas},
     month        = feb,
