Adding antenna section

--- a/main.bib
+++ b/main.bib
@@ -876,3 +876,12 @@
   title = {{W5500 Datasheet}},
   year={2013}
 }
+
+@inproceedings{koopman2004cyclic,
+  title={Cyclic redundancy code (CRC) polynomial selection for embedded networks},
+  author={Koopman, Philip and Chakravarty, Tridib},
+  booktitle={International Conference on Dependable Systems and Networks, 2004},
+  pages={145--154},
+  year={2004},
+  organization={IEEE}
+}
