--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,8 @@
 \usepackage{calc}					              % Calculate text widths; used in page layout
                                         %   changes
 \usepackage{multirow,array}             % Adds multi row tables
+\usepackage{algorithm}                  % For writing algorithms
+\usepackage{algpseudocode}              % For writing algorithms
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page, input
