--- a/src/sections/appendix.tex
+++ b/src/sections/appendix.tex
@@ -1,23 +1,5 @@
-\chapter{This is a chapter-level heading for an appendix}
+\chapter{ASTHROS Network Addresses}
+\label{chap2/app:hosts}
 
-\lipsum[1]
-
-\section{This is the first section-level heading in the appendix}
-
-\lipsum[1]
-
-\subsection{This is the first sub-section-level heading in the appendix}
-
-\lipsum[1]
-
-\subsubsection{This is the first sub-sub-section-level heading in the appendix}
-
-\lipsum[1]
-
-\paragraph{This is the first paragraph-level heading in the appendix}
-
-\lipsum[1]
-
-\subparagraph{This is the first sub-paragraph-level heading in the appendix}
-
-\lipsum[1] 
+\chapter{Amplifier Chain Error Handling}
+\label{chap2/app:if_amp_errors}
