--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -1,6 +1,3 @@
 \leavevmode\vfill
-Here is a dummy dedication.
-The dedication can be vertically centered like this text is.
-See the \LaTeX\ code for this dedication to see how to vertically center the text of
-your dedication.
+To my cat, who had to put up with me harassing her every time I needed a break.
 \vfill
