PSU, Housekeeping, and Central Command

--- a/main.bib
+++ b/main.bib
@@ -633,6 +633,13 @@
   organization = {SPIE}
 }
 
+@misc{priority lock,
+  author = {James, Martin},
+  title = {How to give priority to privileged thread in mutex locking?},
+  url = {https://stackoverflow.com/a/11667891},
+  urldate = {2012-07-26},
+  year = {2012}
+}
 
 # https://iopscience.iop.org/article/10.1086/381786/meta?casa_token=qFk5A7VTpC4AAAAA:gUCDrfoB-sjNXnmo73vI0hS09-mk7GQsSGPdMydsFAJxFr-UzvozNTLXaO5ZzQhaCGygCl6ksxMhXHYT194f3GxWJ_cE
 @misc{spidev,
@@ -657,6 +664,21 @@
   title  = {{Hierarchical Data Format, version 5}},
   url    = {https://github.com/HDFGroup/hdf5},
   year   = {2024}
+}
+
+@inproceedings{hauck2003use,
+  title={Use of the ground support equipment operating system (GSEOS) software on the MESSENGER mission: A case study},
+  author={Hauck, Thomas F and Finnigan, Jeremiah V},
+  booktitle={Proceedings of the 5th International Symposium on Reducing the Cost of Spacecraft Ground Systems and Operations},
+  pages={8--12},
+  year={2003}
+}
+
+@misc{pika, 
+  author = {Garnock-Jones, Thony and Roy, Gavin M. and {Pivotal Software, Inc.}},
+  title = {Pika},
+  url = {https://github.com/pika/pika},
+  year = {2025}
 }
 
 @inproceedings{thompson_texturecam,
@@ -833,6 +855,20 @@
   year   = {2003}
 }
 
+@misc{click,
+  author = {Click},
+  title = {Click: Command-line Interface Library},
+  year = {2019},
+  url = {https://click.palletsprojects.com/},
+  note = {Accessed 2025-05-21}
+}
+
+@manual{mlvs
+  author = {{Micro Lambda Wireless, Inc.}},
+  title = {{MLVS Synthesizer User Manual}},
+  year = {2025}
+}
+
 @inproceedings{mathewson2024customizable,
   title={A customizable, five-stage, intermediate frequency, low noise amplifier and readout chain for the Astrophysics Stratospheric Telescope for High-spectral Resolution Observations at Submillimeter-wavelengths (ASTHROS)},
   author={Mathewson, Justin LH and Rodriguez, Ricardo R and Weeks, Eric L and Horton, Paul and Roberson, Cody and Hedges, Madison and Thompson, Christian and Kawamura, Jonathan H and Siles, Jose V and Mani, Hamdi and others},
@@ -884,4 +920,32 @@
   pages={145--154},
   year={2004},
   organization={IEEE}
+}
+
+@phdthesis{sinclair2021flight,
+  title={In-Flight Performance of the BLAST-TNG Balloon-Borne Far-Infrared Telescope and Development of a Reconfigurable Readout on the RFSoC Platform for Frequency Multiplexed Superconducting Detector Arrays},
+  author={Sinclair, Adrian},
+  year={2021},
+  school={Arizona State University}
+}
+
+@book{gordon2019highly,
+  title={Highly multiplexed superconducting detectors and readout electronics for balloon-borne and ground-based far-infrared imaging and polarimetry},
+  author={Gordon, Samuel},
+  year={2019},
+  publisher={Arizona State University}
+}
+
+@inproceedings{dunne2018comparison,
+  title={A comparison of data streaming frameworks for anomaly detection in embedded systems},
+  author={Dunne, Murray and Gracioli, Giovani and Fischmeister, Sebastian},
+  booktitle={Proceedings of the 1st International Workshop on Security and Privacy for the Internet-of-Things (IoTSec), Orlando, FL, USA},
+  year={2018}
+}
+
+@book{toshev2015learning,
+  title={Learning RabbitMQ},
+  author={Toshev, Martin},
+  year={2015},
+  publisher={Packt Publishing Ltd}
 }
