Update on Overleaf.

--- a/main.bib
+++ b/main.bib
@@ -863,7 +863,7 @@
   note = {Accessed 2025-05-21}
 }
 
-@manual{mlvs
+@manual{mlvs,
   author = {{Micro Lambda Wireless, Inc.}},
   title = {{MLVS Synthesizer User Manual}},
   year = {2025}
