Update on Overleaf.

--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -1,3 +1,8 @@
+% \leavevmode\vfill
+% To my cat, who had to put up with me every time I needed a break.
+% \vfill
+
 \leavevmode\vfill
-To my cat, who had to put up with me harassing her every time I needed a break.
+To my cat, who had to put up with me every time I needed a break.
+
 \vfill
