--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -3,6 +3,5 @@
 % \vfill
 
 \leavevmode\vfill
-To my cat, who had to put up with me every time I needed a break.
-
+\centering{To my cat, who had to put up with me every time I needed a break.}
 \vfill
