Update on Overleaf.

--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -3,5 +3,7 @@
 % \vfill
 
 \leavevmode\vfill
-\centering{To my cat, who had to put up with me every time I needed a break.}
+\begin{center}
+To my cat, who had to put up with me every time I needed a break.    
+\end{center}
 \vfill
