--- a/main.tex
+++ b/main.tex
@@ -1169,11 +1169,13 @@
 % Body
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
-\include{src/chapters/chapter1}
-\include{src/chapters/chapter2}                     %   \include rather than \input for chapters
-\include{src/chapters/chapter3}
-\include{src/chapters/chapter4}
-\include{src/chapters/chapter5}
+\include{src/sections/introduction}
+\include{src/chapters/chapter_msl}
+\include{src/chapters/chapter_spectra}                     %   \include rather than \input for chapters
+\include{src/chapters/chapter_rst}
+\include{src/chapters/chapter_carina}
+\include{src/chapters/chapter_readout}
+\include{src/sections/conclusion}
                                         % Heading commands (in descending order):
                                         % \chapter
                                         % \section
