Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1169,13 +1169,13 @@
 % Body
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
-\include{src/sections/introduction}
+\include{src/chapters/introduction}
 \include{src/chapters/chapter_msl}
-\include{src/chapters/chapter_spectra}                     %   \include rather than \input for chapters
+\include{src/chapters/chapter_spectra}
 \include{src/chapters/chapter_rst}
 \include{src/chapters/chapter_carina}
 \include{src/chapters/chapter_readout}
-\include{src/sections/conclusion}
+\include{src/chapters/conclusion}
                                         % Heading commands (in descending order):
                                         % \chapter
                                         % \section
