Methodology for Carina

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
 \usepackage{multirow,array}             % Adds multi row tables
 \usepackage{algorithm}                  % For writing algorithms
 \usepackage{algpseudocode}              % For writing algorithms
+\usepackage{siunitx}               % For writing units and numbers with units
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page, input
@@ -59,7 +60,7 @@
   {Dissertation}                        %<Enter the type of document (capitalized)
 \newcommand*{\degreename}
   {Doctor of Philosophy}                %<Enter the type of degree (capitalized)
-\newcommand*\defdate{May 2025}        %<Give month (written out fully) and year of
+\newcommand*\defdate{June 2025}        %<Give month (written out fully) and year of
                                         %   the oral defense
 \listadd{\committeechair}{Chris Groppi}   %<Enter committee chair name; use \listadd for
 \listadd{\committeechair}{Jim Bell}%   for additional names
