--- a/main.bib
+++ b/main.bib
@@ -260,6 +260,63 @@
   publisher = {Multidisciplinary Digital Publishing Institute}
 }
 
+@article{Rebolledo_2021,
+   title={The Carina Nebula and Gum 31 Molecular Complex. III. The Distribution of the 1–3 GHz Radio Continuum across the Whole Nebula},
+   volume={909},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.3847/1538-4357/abd7a3},
+   DOI={10.3847/1538-4357/abd7a3},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Rebolledo, David and Green, Anne J. and Burton, Michael G. and Breen, Shari L. and Garay, Guido},
+   year={2021},
+   month=mar, pages={93} }
+
+@book{rohlfs2013tools,
+  title={Tools of radio astronomy},
+  author={Rohlfs, Kristen and Wilson, Thomas L},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{salatino2012spectral,
+  title={The Spectral Energy Distribution of the Carina Nebula from Far-infrared to Radio Wavelengths},
+  author={Salatino, Maria and de Bernardis, Paolo and Masi, Silvia and Polenta, Gianluca},
+  journal={The Astrophysical Journal},
+  volume={748},
+  number={1},
+  pages={1},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
+
+
+@ARTICLE{2020SciPy-NMeth,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2},
+}
+
 @article{guzik2008development,
   title     = {Development of the high altitude student platform},
   author    = {Guzik, TG and Besse, S and Calongne, A and Dominique, A and Ellison, SB and Gould, R and Granger, D and Olano, D and Smith, D and Stewart, M and others},
@@ -341,6 +398,50 @@
   year      = {2018},
   copyright = {Creative Commons Attribution 4.0 International}
 }
+
+@article{luridiana2015pyneb,
+  title={Pyneb: a new tool for analyzing emission lines-i. code description and validation of results},
+  author={Luridiana, Valentina and Morisset, Christophe and Shaw, Richard A},
+  journal={Astronomy \& Astrophysics},
+  volume={573},
+  pages={A42},
+  year={2015},
+  publisher={EDP Sciences}
+}
+
+@article{froese2004breit,
+  title={Breit-Pauli energy levels, lifetimes, and transition probabilities for the beryllium-like to neon-like sequences},
+  author={Froese Fischer, Charlotte and Tachiev, Georgio},
+  journal={Atomic Data and Nuclear Data Tables},
+  volume={87},
+  number={1},
+  pages={1--184},
+  year={2004}
+}
+
+@incollection{7288EL,
+  booktitle={CRC Series in Evaluated Data in Atomic Physics},
+  editor={J. W. Gallagher},
+  publisher={CRC Press},
+  address={Boca Raton, FL},
+  title={Tables of Spectra of Hydrogen, Carbon, Nitrogen, and Oxygen Atoms and Ions},
+  author={C. E. Moore},
+  year={1993},
+  notes={NIST compilation}}
+
+@article{tayal2011electron,
+  title={Electron excitation collision strengths for singly ionized nitrogen},
+  author={Tayal, SS},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={195},
+  number={2},
+  pages={12},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
+
+
 
 @inproceedings{kerner_multispec,
   title     = {Novelty detection for multispectral images with application to planetary exploration},
@@ -863,11 +964,215 @@
   note = {Accessed 2025-05-21}
 }
 
+@article{heyminck2012great,
+  title={GREAT: the SOFIA high-frequency heterodyne instrument},
+  author={Heyminck, Stefan and Graf, UU and G{\"u}sten, R and Stutzki, J{\"u}rgen and H{\"u}bers, Heinz-Wilhelm and Hartogh, P},
+  journal={Astronomy \& Astrophysics},
+  volume={542},
+  pages={L1},
+  year={2012},
+  publisher={EDP Sciences}
+}
+
+@article{shuping2014overview,
+  title={Overview of the SOFIA Data Processing System: A generalized system for manual and automatic data processing at the SOFIA Science Center},
+  author={Shuping, RY and Krzaczek, Robert and Vacca, William D and Charcos-Llorens, Miguel and Reach, William T and Alles, Rosemary and Clarke, Melanie and Melchiorri, Riccardo and Radomski, J and Shenoy, S and others},
+  journal={arXiv preprint arXiv:1412.5546},
+  year={2014}
+}
+
+@article{virkler2020broadband,
+  title={A Broadband Digital Spectrometer for the Deep Space Network},
+  author={Virkler, Kristen and Kocz, Jonathon and Soriano, Melissa and Horiuchi, Shinji and Pineda, Jorge L and McNichols, Tyrone},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={251},
+  number={1},
+  pages={1},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{oberst2011205,
+  title={A 205 $\mu$m [N II] map of the Carina Nebula},
+  author={Oberst, TE and Parshley, SC and Nikola, T and Stacey, GJ and L{\"o}hr, A and Lane, AP and Stark, AA and Kamenetzky, J},
+  journal={The Astrophysical Journal},
+  volume={739},
+  number={2},
+  pages={100},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
+
 @manual{mlvs,
   author = {{Micro Lambda Wireless, Inc.}},
   title = {{MLVS Synthesizer User Manual}},
   year = {2025}
 }
+
+@article{robitaille2016spectral,
+  title={spectral-cube: Read and analyze astrophysical spectral data cubes},
+  author={Robitaille, Thomas and Ginsburg, Adam and Beaumont, Chris and Leroy, Adam and Rosolowsky, Erik},
+  journal={Astrophysics Source Code Library},
+  pages={ascl--1609},
+  year={2016}
+}
+
+@article{goldsmith2015herschel,
+  title={Herschel galactic plane survey of [N ii] fine structure emission},
+  author={Goldsmith, Paul F and Y{\i}ld{\i}z, Umut A and Langer, William D and Pineda, Jorge L},
+  journal={The Astrophysical Journal},
+  volume={814},
+  number={2},
+  pages={133},
+  year={2015},
+  publisher={IOP Publishing}
+}
+@article{goldsmith2024electron,
+  title={Electron Densities in H ii Regions from Observation of [N ii] 205 $\mu$m Fine Structure and Radio Recombination Lines},
+  author={Goldsmith, Paul F and Anderson, LD and Pineda, Jorge L and Aladro, Rebeca and Ricken, Oliver},
+  journal={The Astrophysical Journal},
+  volume={974},
+  number={1},
+  pages={34},
+  year={2024},
+  publisher={IOP Publishing}
+}
+
+@article{balser2015azimuthal,
+  title={Azimuthal metallicity structure in the milky way disk},
+  author={Balser, Dana S and Wenger, Trey V and Anderson, LD and Bania, TM},
+  journal={The Astrophysical Journal},
+  volume={806},
+  number={2},
+  pages={199},
+  year={2015},
+  publisher={IOP Publishing}
+}
+
+@article{esteban2018revisiting,
+  title={Revisiting the radial abundance gradients of nitrogen and oxygen of the Milky Way},
+  author={Esteban, C and Garc{\'\i}a-Rojas, J},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={478},
+  number={2},
+  pages={2315--2336},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+
+
+@article{pineda2019electron,
+  title={Electron Densities and Nitrogen Abundances in Ionized Gas Derived Using [N ii] Fine-structure and Hydrogen Recombination Lines},
+  author={Pineda, Jorge L and Horiuchi, Shinji and Anderson, Loren D and Luisi, Matteo and Langer, William D and Goldsmith, Paul F and Kuiper, Thomas BH and Bryden, Geoff and Soriano, Melissa and Lazio, T Joseph W},
+  journal={The Astrophysical Journal},
+  volume={886},
+  number={1},
+  pages={1},
+  year={2019},
+  publisher={IOP Publishing}
+}
+
+
+@article{astropy:2013,
+Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
+Archiveprefix = {arXiv},
+Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Greenfield}, P. and {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and {Davis}, M. and {Ginsburg}, A. and {Price-Whelan}, A.~M. and {Kerzendorf}, W.~E. and {Conley}, A. and {Crighton}, N. and {Barbary}, K. and {Muna}, D. and {Ferguson}, H. and {Grollier}, F. and {Parikh}, M.~M. and {Nair}, P.~H. and {Unther}, H.~M. and {Deil}, C. and {Woillez}, J. and {Conseil}, S. and {Kramer}, R. and {Turner}, J.~E.~H. and {Singer}, L. and {Fox}, R. and {Weaver}, B.~A. and {Zabalza}, V. and {Edwards}, Z.~I. and {Azalee Bostroem}, K. and {Burke}, D.~J. and {Casey}, A.~R. and {Crawford}, S.~M. and {Dencheva}, N. and {Ely}, J. and {Jenness}, T. and {Labrie}, K. and {Lim}, P.~L. and {Pierfederici}, F. and {Pontzen}, A. and {Ptak}, A. and {Refsdal}, B. and {Servillat}, M. and {Streicher}, O.},
+Doi = {10.1051/0004-6361/201322068},
+Eid = {A33},
+Eprint = {1307.6212},
+Journal = {\aap},
+Keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+Month = oct,
+Pages = {A33},
+Primaryclass = {astro-ph.IM},
+Title = {{Astropy: A community Python package for astronomy}},
+Volume = 558,
+Year = 2013,
+Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
+
+@ARTICLE{astropy:2018,
+       author = {{Astropy Collaboration} and {Price-Whelan}, A.~M. and
+         {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
+         {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and
+         {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {Vand
+        erPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and
+         {de Val-Borro}, M. and {Aldcroft}, T.~L. and {Cruz}, K.~L. and
+         {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Ardelean}, C. and
+         {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and
+         {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and
+         {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and
+         {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and
+         {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and
+         {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and
+         {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and
+         {Corrales}, L. and {Crichton}, D. and {D'Avella}, D. and {Deil}, C. and
+         {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and
+         {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and
+         {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and
+         {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and
+         {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and
+         {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and
+         {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and
+         {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and
+         {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and
+         {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and
+         {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and
+         {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and
+         {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and
+         {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and
+         {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and
+         {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and
+         {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and
+         {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and
+         {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and
+         {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and
+         {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and
+         {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and
+         {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and
+         {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and
+         {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and
+         {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and
+         {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and
+         {Zabalza}, V. and {Astropy Contributors}},
+        title = "{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}",
+      journal = {\aj},
+     keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = sep,
+       volume = {156},
+       number = {3},
+          eid = {123},
+        pages = {123},
+          doi = {10.3847/1538-3881/aabc4f},
+archivePrefix = {arXiv},
+       eprint = {1801.02634},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{astropy:2022,
+       author = {{Astropy Collaboration} and {Price-Whelan}, Adrian M. and {Lim}, Pey Lian and {Earl}, Nicholas and {Starkman}, Nathaniel and {Bradley}, Larry and {Shupe}, David L. and {Patil}, Aarya A. and {Corrales}, Lia and {Brasseur}, C.~E. and {N{"o}the}, Maximilian and {Donath}, Axel and {Tollerud}, Erik and {Morris}, Brett M. and {Ginsburg}, Adam and {Vaher}, Eero and {Weaver}, Benjamin A. and {Tocknell}, James and {Jamieson}, William and {van Kerkwijk}, Marten H. and {Robitaille}, Thomas P. and {Merry}, Bruce and {Bachetti}, Matteo and {G{"u}nther}, H. Moritz and {Aldcroft}, Thomas L. and {Alvarado-Montes}, Jaime A. and {Archibald}, Anne M. and {B{'o}di}, Attila and {Bapat}, Shreyas and {Barentsen}, Geert and {Baz{'a}n}, Juanjo and {Biswas}, Manish and {Boquien}, M{'e}d{'e}ric and {Burke}, D.~J. and {Cara}, Daria and {Cara}, Mihai and {Conroy}, Kyle E. and {Conseil}, Simon and {Craig}, Matthew W. and {Cross}, Robert M. and {Cruz}, Kelle L. and {D'Eugenio}, Francesco and {Dencheva}, Nadia and {Devillepoix}, Hadrien A.~R. and {Dietrich}, J{"o}rg P. and {Eigenbrot}, Arthur Davis and {Erben}, Thomas and {Ferreira}, Leonardo and {Foreman-Mackey}, Daniel and {Fox}, Ryan and {Freij}, Nabil and {Garg}, Suyog and {Geda}, Robel and {Glattly}, Lauren and {Gondhalekar}, Yash and {Gordon}, Karl D. and {Grant}, David and {Greenfield}, Perry and {Groener}, Austen M. and {Guest}, Steve and {Gurovich}, Sebastian and {Handberg}, Rasmus and {Hart}, Akeem and {Hatfield-Dodds}, Zac and {Homeier}, Derek and {Hosseinzadeh}, Griffin and {Jenness}, Tim and {Jones}, Craig K. and {Joseph}, Prajwel and {Kalmbach}, J. Bryce and {Karamehmetoglu}, Emir and {Ka{l}uszy{'n}ski}, Miko{l}aj and {Kelley}, Michael S.~P. and {Kern}, Nicholas and {Kerzendorf}, Wolfgang E. and {Koch}, Eric W. and {Kulumani}, Shankar and {Lee}, Antony and {Ly}, Chun and {Ma}, Zhiyuan and {MacBride}, Conor and {Maljaars}, Jakob M. and {Muna}, Demitri and {Murphy}, N.~A. and {Norman}, Henrik and {O'Steen}, Richard and {Oman}, Kyle A. and {Pacifici}, Camilla and {Pascual}, Sergio and {Pascual-Granado}, J. and {Patil}, Rohit R. and {Perren}, Gabriel I. and {Pickering}, Timothy E. and {Rastogi}, Tanuj and {Roulston}, Benjamin R. and {Ryan}, Daniel F. and {Rykoff}, Eli S. and {Sabater}, Jose and {Sakurikar}, Parikshit and {Salgado}, Jes{'u}s and {Sanghi}, Aniket and {Saunders}, Nicholas and {Savchenko}, Volodymyr and {Schwardt}, Ludwig and {Seifert-Eckert}, Michael and {Shih}, Albert Y. and {Jain}, Anany Shrey and {Shukla}, Gyanendra and {Sick}, Jonathan and {Simpson}, Chris and {Singanamalla}, Sudheesh and {Singer}, Leo P. and {Singhal}, Jaladh and {Sinha}, Manodeep and {Sip{H{o}}cz}, Brigitta M. and {Spitler}, Lee R. and {Stansby}, David and {Streicher}, Ole and {{{S}}umak}, Jani and {Swinbank}, John D. and {Taranu}, Dan S. and {Tewary}, Nikita and {Tremblay}, Grant R. and {Val-Borro}, Miguel de and {Van Kooten}, Samuel J. and {Vasovi{'c}}, Zlatan and {Verma}, Shresth and {de Miranda Cardoso}, Jos{'e} Vin{'i}cius and {Williams}, Peter K.~G. and {Wilson}, Tom J. and {Winkel}, Benjamin and {Wood-Vasey}, W.~M. and {Xue}, Rui and {Yoachim}, Peter and {Zhang}, Chen and {Zonca}, Andrea and {Astropy Project Contributors}},
+        title = "{The Astropy Project: Sustaining and Growing a Community-oriented Open-source Project and the Latest Major Release (v5.0) of the Core Package}",
+      journal = {\apj},
+     keywords = {Astronomy software, Open source software, Astronomy data analysis, 1855, 1866, 1858, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2022,
+        month = aug,
+       volume = {935},
+       number = {2},
+          eid = {167},
+        pages = {167},
+          doi = {10.3847/1538-4357/ac7c74},
+archivePrefix = {arXiv},
+       eprint = {2206.14220},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...935..167A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @inproceedings{mathewson2024customizable,
   title={A customizable, five-stage, intermediate frequency, low noise amplifier and readout chain for the Astrophysics Stratospheric Telescope for High-spectral Resolution Observations at Submillimeter-wavelengths (ASTHROS)},
@@ -935,6 +1240,25 @@
   year={2019},
   publisher={Arizona State University}
 }
+@book{gordon2002radio,
+  title={Radio recombination lines: their physics and astronomical applications},
+  author={Gordon, Mark and Sorochenko, Roman L},
+  volume={282},
+  year={2002},
+  publisher={Springer Science \& Business Media}
+}
+
+@software{2017ascl.soft07001W,
+       author = {{Wenger}, Trey V. and {Kepley}, Amanda K. and {Balser}, Dana S.},
+        title = "{HRM: HII Region Models}",
+ howpublished = {Astrophysics Source Code Library, record ascl:1707.001},
+         year = 2017,
+        month = jul,
+          eid = {ascl:1707.001},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ascl.soft07001W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @inproceedings{dunne2018comparison,
   title={A comparison of data streaming frameworks for anomaly detection in embedded systems},
