--- a/main.bib
+++ b/main.bib
@@ -42,6 +42,7 @@
 
 
 @misc{jwstjdoc,
+  author       = {{JWST User Documentation}},
   title        = {{JWST User Documentation (JDox)}},
   keywords     = {Space Telescope Science Institute, STScI, James Webb Space Telescope, JWST},
   howpublished = {JWST User Documentation Website},
@@ -1060,6 +1061,18 @@
   year={2018},
   publisher={Oxford University Press}
 }
+
+@article{brooks2000unlocking,
+  title={Unlocking the Keyhole: H2 and PAH emission from molecular clumps in the Keyhole Nebula},
+  author={Brooks, KJ and Burton, MG and Rathborne, JM and Ashley, MCB and Storey, JWV},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={319},
+  number={1},
+  pages={95--102},
+  year={2000},
+  publisher={Blackwell Science Ltd Oxford, UK}
+}
+
 
 
 
