--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \usepackage{algorithm}                  % For writing algorithms
 \usepackage{algpseudocode}              % For writing algorithms
 \usepackage{siunitx}               % For writing units and numbers with units
+\usepackage{subcaption}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page, input
@@ -792,7 +793,7 @@
 
 \providetoggle{usebiblatex}             % True = a biblatex package is being used;
                                         %   False = 'natbib' is being used
-\settoggle{usebiblatex}{false}           %~Set to 'false' to use 'natbib' intead of
+\settoggle{usebiblatex}{true}           %~Set to 'false' to use 'natbib' intead of
                                         %   biblatex; I strongly recommend using biblatex
                                         %   because natbib is rather old and will break
                                         %   for innocuous things like underscores in URLs
