Update on Overleaf.

--- a/main.bib
+++ b/main.bib
@@ -1030,7 +1030,7 @@
 
 @article{esteban2018revisiting,
   title={Revisiting the radial abundance gradients of nitrogen and oxygen of the Milky Way},
-  author={Esteban, C and Garc{\'\i}a-Rojas, J},
+  author={Esteban, C and Garcia-Rojas, J},
   journal={Monthly Notices of the Royal Astronomical Society},
   volume={478},
   number={2},
