--- a/src/sections/appendix.tex
+++ b/src/sections/appendix.tex
@@ -1,5 +1,7 @@
 \chapter{ASTHROS Network Addresses}
-\label{chap2/app:hosts}
+Lorem those ipsums
+\label{readout/app:hosts}
 
 \chapter{Amplifier Chain Error Handling}
-\label{chap2/app:if_amp_errors}
+Lorem those ipsums
+\label{readout/app:if_amp_errors}
