Update on Overleaf.

--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8 
 @string{apl = {Appl. Phys. Lett.}}
 @string{aj = {Astronomical Journal}}
 @string{apj = {Astrophysical Journal}}
@@ -566,7 +567,7 @@
                Cournapeau and Eric Wieser and Julian Taylor and Sebastian
                Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
                and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-               Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+               Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
                R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
                G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
                Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
@@ -1030,7 +1031,7 @@
 
 @article{esteban2018revisiting,
   title={Revisiting the radial abundance gradients of nitrogen and oxygen of the Milky Way},
-  author={Esteban, C and Garcia-Rojas, J},
+  author={Esteban, C and Garcia-Roj{\'{a}}s, J},
   journal={Monthly Notices of the Royal Astronomical Society},
   volume={478},
   number={2},
