--- a/main.bib
+++ b/main.bib
@@ -41,10 +41,7 @@
 @string{sm = {Superlattices and Microstructures}}
 @string{ssc = {Solid State Comm.}}
 @string{sst = {Semicond. Sci. Technol.}}
-
 @Preamble{ " \newcommand{\noop}[1]{} " }
-
-
 @misc{2017ascl.soft07001W,
   author       = {{Wenger}, Trey V. and {Kepley}, Amanda K. and {Balser}, Dana S.},
   title        = {{HRM: HII Region Models}},
@@ -55,7 +52,6 @@
   adsurl       = {https://ui.adsabs.harvard.edu/abs/2017ascl.soft07001W},
   adsnote      = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 @article{2020SciPy-NMeth,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
              Haberland, Matt and Reddy, Tyler and Cournapeau, David and
@@ -79,7 +75,6 @@
   adsurl  = {https://rdcu.be/b08Wh},
   doi     = {10.1038/s41592-019-0686-2}
 }
-
 @incollection{7288EL,
   booktitle = {CRC Series in Evaluated Data in Atomic Physics},
   editor    = {J. W. Gallagher},
@@ -90,8 +85,6 @@
   year      = {1993},
   notes     = {NIST compilation}
 }
-
-
 @article{astropy:2013,
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
   adsurl        = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
@@ -110,7 +103,6 @@
   year          = 2013,
   bdsk-url-1    = {https://dx.doi.org/10.1051/0004-6361/201322068}
 }
-
 @article{astropy:2018,
   author        = {{Astropy Collaboration} and {Price-Whelan}, A.~M. and
                    {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
@@ -171,7 +163,6 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 @article{astropy:2022,
   author        = {{Astropy Collaboration} and {Price-Whelan}, Adrian M. and {Lim}, Pey Lian and {Earl}, Nicholas and {Starkman}, Nathaniel and {Bradley}, Larry and {Shupe}, David L. and {Patil}, Aarya A. and {Corrales}, Lia and {Brasseur}, C.~E. and {N{"o}the}, Maximilian and {Donath}, Axel and {Tollerud}, Erik and {Morris}, Brett M. and {Ginsburg}, Adam and {Vaher}, Eero and {Weaver}, Benjamin A. and {Tocknell}, James and {Jamieson}, William and {van Kerkwijk}, Marten H. and {Robitaille}, Thomas P. and {Merry}, Bruce and {Bachetti}, Matteo and {G{"u}nther}, H. Moritz and {Aldcroft}, Thomas L. and {Alvarado-Montes}, Jaime A. and {Archibald}, Anne M. and {B{'o}di}, Attila and {Bapat}, Shreyas and {Barentsen}, Geert and {Baz{'a}n}, Juanjo and {Biswas}, Manish and {Boquien}, M{'e}d{'e}ric and {Burke}, D.~J. and {Cara}, Daria and {Cara}, Mihai and {Conroy}, Kyle E. and {Conseil}, Simon and {Craig}, Matthew W. and {Cross}, Robert M. and {Cruz}, Kelle L. and {D'Eugenio}, Francesco and {Dencheva}, Nadia and {Devillepoix}, Hadrien A.~R. and {Dietrich}, J{"o}rg P. and {Eigenbrot}, Arthur Davis and {Erben}, Thomas and {Ferreira}, Leonardo and {Foreman-Mackey}, Daniel and {Fox}, Ryan and {Freij}, Nabil and {Garg}, Suyog and {Geda}, Robel and {Glattly}, Lauren and {Gondhalekar}, Yash and {Gordon}, Karl D. and {Grant}, David and {Greenfield}, Perry and {Groener}, Austen M. and {Guest}, Steve and {Gurovich}, Sebastian and {Handberg}, Rasmus and {Hart}, Akeem and {Hatfield-Dodds}, Zac and {Homeier}, Derek and {Hosseinzadeh}, Griffin and {Jenness}, Tim and {Jones}, Craig K. and {Joseph}, Prajwel and {Kalmbach}, J. Bryce and {Karamehmetoglu}, Emir and {Ka{l}uszy{'n}ski}, Miko{l}aj and {Kelley}, Michael S.~P. and {Kern}, Nicholas and {Kerzendorf}, Wolfgang E. and {Koch}, Eric W. and {Kulumani}, Shankar and {Lee}, Antony and {Ly}, Chun and {Ma}, Zhiyuan and {MacBride}, Conor and {Maljaars}, Jakob M. and {Muna}, Demitri and {Murphy}, N.~A. and {Norman}, Henrik and {O'Steen}, Richard and {Oman}, Kyle A. and {Pacifici}, Camilla and {Pascual}, Sergio and {Pascual-Granado}, J. and {Patil}, Rohit R. and {Perren}, Gabriel I. and {Pickering}, Timothy E. and {Rastogi}, Tanuj and {Roulston}, Benjamin R. and {Ryan}, Daniel F. and {Rykoff}, Eli S. and {Sabater}, Jose and {Sakurikar}, Parikshit and {Salgado}, Jes{'u}s and {Sanghi}, Aniket and {Saunders}, Nicholas and {Savchenko}, Volodymyr and {Schwardt}, Ludwig and {Seifert-Eckert}, Michael and {Shih}, Albert Y. and {Jain}, Anany Shrey and {Shukla}, Gyanendra and {Sick}, Jonathan and {Simpson}, Chris and {Singanamalla}, Sudheesh and {Singer}, Leo P. and {Singhal}, Jaladh and {Sinha}, Manodeep and {Sip{H{o}}cz}, Brigitta M. and {Spitler}, Lee R. and {Stansby}, David and {Streicher}, Ole and {{\v{S}}umak}, Jani and {Swinbank}, John D. and {Taranu}, Dan S. and {Tewary}, Nikita and {Tremblay}, Grant R. and {Val-Borro}, Miguel de and {Van Kooten}, Samuel J. and {Vasovi{'c}}, Zlatan and {Verma}, Shresth and {de Miranda Cardoso}, Jos{'e} Vin{'i}cius and {Williams}, Peter K.~G. and {Wilson}, Tom J. and {Winkel}, Benjamin and {Wood-Vasey}, W.~M. and {Xue}, Rui and {Yoachim}, Peter and {Zhang}, Chen and {Zonca}, Andrea and {Astropy Project Contributors}},
   title         = {{The Astropy Project: Sustaining and Growing a Community-oriented Open-source Project and the Latest Major Release (v5.0) of the Core Package}},
@@ -190,7 +181,6 @@
   adsurl        = {https://ui.adsabs.harvard.edu/abs/2022ApJ...935..167A},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 @article{balser2015azimuthal,
   title     = {Azimuthal metallicity structure in the milky way disk},
   author    = {Balser, Dana S and Wenger, Trey V and Anderson, LD and Bania, TM},
@@ -201,9 +191,8 @@
   year      = {2015},
   publisher = {IOP Publishing}
 }
-
 @article{bell_mastcam,
-  title     = {The {Mars Science Laboratory} {Curiosity} rover Mastcam instruments: Preflight and in-flight calibration, validation, and data archiving},
+  title     = {The {Mars Science Laboratory} {Curiosity} rover {Mastcam} instruments: Preflight and in-flight calibration, validation, and data archiving},
   author    = {Bell III, James F and Godber, A and McNair, S and Caplinger, MA and Maki, JN and Lemmon, MT and Van Beek, J and Malin, MC and Wellington, D and Kinch, KM and others},
   journal   = {Earth and Space Science},
   volume    = {4},
@@ -212,7 +201,6 @@
   year      = {2017},
   publisher = {Wiley Online Library}
 }
-
 @inproceedings{bell_psyche,
   booktitle = {47th Lunar and Planetary Science Conference},
   title     = {The Psyche Multispectral Imager Investigation: Characterizing the Geology, Topography, and Compositional Properties of a Metallic World},
@@ -221,7 +209,6 @@
   keywords  = {Psyche, Metallic World, Future Missions, Multispectral Imager},
   url       = {https://elib.dlr.de/110238/}
 }
-
 @article{bell2016mastcam,
   title   = {MastCam-Z: designing a geologic, stereoscopic, and multispectral pair of zoom cameras for the {NASA} {Mars} 2020 rover},
   author  = {Bell, JF and Maki, JN and Mehall, GL and Ravine, MA and Caplinger, MA and Team, Mastcam-Z},
@@ -230,7 +217,6 @@
   pages   = {4126},
   year    = {2016}
 }
-
 @inproceedings{bell2019tactical,
   title        = {Tactical and Strategic Data Analysis Methods for Multispectral Imaging Data from Landed {Mars} Missions},
   author       = {Bell, James F},
@@ -239,8 +225,6 @@
   year         = {2019},
   organization = {IEEE}
 }
-
-
 @article{brooks2000unlocking,
   title     = {Unlocking the Keyhole: H2 and PAH emission from molecular clumps in the Keyhole Nebula},
   author    = {Brooks, KJ and Burton, MG and Rathborne, JM and Ashley, MCB and Storey, JWV},
@@ -251,7 +235,6 @@
   year      = {2000},
   publisher = {Blackwell Science Ltd Oxford, UK}
 }
-
 @article{casertano2022determining,
   title   = {Determining the best-fitting slope and its uncertainty for up-the-ramp sampled images with unevenly distributed resultants},
   author  = {Casertano, Stefano},
@@ -259,7 +242,6 @@
   volume  = {394},
   year    = {2022}
 }
-
 @article{chen1994raid,
   title     = {RAID: High-performance, reliable secondary storage},
   author    = {Chen, Peter M and Lee, Edward K and Gibson, Garth A and Katz, Randy H and Patterson, David A},
@@ -270,7 +252,6 @@
   year      = {1994},
   publisher = {ACM New York, NY, USA}
 }
-
 @inproceedings{cillis2018snowballs,
   title        = {Snowballs in Euclid and WFIRST detectors},
   author       = {Cillis, Analia N and Cottingham, David A and Waczynski, Augustyn and Hill, Robert J and Wen, Yiting and Foltz, Roger and Cheng, Edward and Cheung, Stephanie A and Cho, Benjamin and Delo, Gregory S and others},
@@ -280,8 +261,6 @@
   year         = {2018},
   organization = {SPIE}
 }
-
-
 @misc{click,
   author = {Click},
   title  = {Click: Command-line Interface Library},
@@ -294,7 +273,6 @@
   title  = {Raspberry Pi Compute Module 4},
   year   = {2023}
 }
-
 @manual{cm4io,
   author = {{Raspberry Pi Ltd}},
   title  = {Raspberry Pi Compute Module 4 IO Board},
@@ -732,16 +710,11 @@
   year         = {2024},
   organization = {SPIE}
 }
-
-%% report.bib - contains BiBtex input for bibliography
-
-# https://iopscience.iop.org/article/10.1086/316559/pdf?casa_token=lFEJq9PGBzEAAAAA:YwFIeSx-1C6TGUyZbd0CGpnofyPwh3So23uEGMIwUKAMBgHfuW43jSxPtU1j8yrRdTk9HBkro77KpfVb60fJLVu3d1Kq
 @manual{mdrive,
   author = {{intelligent motion systems, inc}},
   title  = {{MDrive Motor+Driver Motion Control Operating Instructions}},
   year   = {2003}
 }
-
 @article{mills1991internet,
   title     = {Internet time synchronization: the network time protocol},
   author    = {Mills, David L},
