omg Am I done with carina?

--- a/main.bib
+++ b/main.bib
@@ -1235,3 +1235,57 @@
   number  = {11},
   year    = {2009}
 }
+
+@article{smith2007census,
+  title={A census of the Carina Nebula--II. Energy budget and global properties of the nebulosity},
+  author={Smith, Nathan and Brooks, Kate J},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={379},
+  number={4},
+  pages={1279--1292},
+  year={2007},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{smith2006census,
+  title={A census of the Carina Nebula—I. Cumulative energy input from massive stars},
+  author={Smith, Nathan},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={367},
+  number={2},
+  pages={763--772},
+  year={2006},
+  publisher={Blackwell Science Ltd Oxford, UK}
+}
+
+@article{brooks2005simba,
+  title={SIMBA observations of the Keyhole Nebula},
+  author={Brooks, Kate J and Garay, Guido and Nielbock, Markus and Smith, Nathan and Cox, Pierre},
+  journal={The Astrophysical Journal},
+  volume={634},
+  number={1},
+  pages={436},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
+@article{kaasinen2016cosmos,
+  title={The COSMOS [OII] Survey: Evolution of Electron Density with Star Formation Rate},
+  author={Kaasinen, Melanie and Bian, Fuyan and Groves, Brent and Kewley, Lisa and Gupta, Anshu},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  pages={stw2827},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@article{shirazi2014stars,
+  title={Stars were born in significantly denser regions in the early universe},
+  author={Shirazi, Maryam and Brinchmann, Jarle and Rahmati, Alireza},
+  journal={The Astrophysical Journal},
+  volume={787},
+  number={2},
+  pages={120},
+  year={2014},
+  publisher={IOP Publishing}
+}
+
