Whoops need my citations

--- a/main.bib
+++ b/main.bib
@@ -502,6 +502,23 @@
   year      = {2003}
 }
 
+
+@inproceedings{wagstaff2018deep,
+  title={Deep mars: Cnn classification of mars imagery for the pds imaging atlas},
+  author={Wagstaff, Kiri and Lu, You and Stanboli, Alice and Grimes, Kevin and Gowda, Thamme and Padams, Jordan},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={32},
+  number={1},
+  year={2018}
+}
+
+@inproceedings{grimes2018pds,
+  title={{NASA PDS IMG}: Accessing Your Planetary Image Data},
+  author = {Grimes, Kevin and Padams, Jordan and Hollins, Galen and Lavoie, Sue and Stanboli, Alice and Wagstaff, Kiri},
+  organization = {Planetary Science Informatics and Data Analytics Conference}, 
+  year = {2018}
+}
+
 @article{heyminck2012great,
   title     = {GREAT: the SOFIA high-frequency heterodyne instrument},
   author    = {Heyminck, Stefan and Graf, UU and G{\"u}sten, R and Stutzki, J{\"u}rgen and H{\"u}bers, Heinz-Wilhelm and Hartogh, P},
@@ -519,6 +536,16 @@
   pages        = {1--8},
   year         = {2021},
   organization = {IEEE}
+}
+
+
+@inproceedings{horton2020novelty,
+  title={Novelty and Discovery Content Analysis Methods for the Planetary Data System Image Atlas},
+  author={Horton, Paul and Ravichandar, Sanjna and Lee, Jake and Kerner, Hannah Rae and Natha, Anil and Soliman, Tariq K and Grimes, Kevin and Wagstaff, Kiri and Verma, Rishi and McAuley, James},
+  booktitle={AGU Fall Meeting Abstracts},
+  volume={2020},
+  pages={P004--0013},
+  year={2020}
 }
 
 
