Update on Overleaf.

--- a/main.bib
+++ b/main.bib
@@ -120,6 +120,18 @@
   doi     = {10.1038/s41592-019-0686-2}
 }
 
+@inproceedings{5731130,
+  author={Kasparian, F.J. and Beilin, P.E.S. and Turney, D.},
+  booktitle={Digital Avionics Systems Conference, 2003. DASC '03. The 22nd}, 
+  title={Ruggedized PC/104-Plus PowerPC Processor card for avionics}, 
+  year={2003},
+  volume={2},
+  number={},
+  pages={6.C.3-6.1-8 vol.2},
+  keywords={Packaging;Standards;Ceramics;Pins;Power supplies;Glass},
+  doi={10.1109/DASC.2003.1245885}
+}
+
 @incollection{7288EL,
   booktitle = {CRC Series in Evaluated Data in Atomic Physics},
   editor    = {J. W. Gallagher},
@@ -1388,14 +1400,3 @@
   number  = {11},
   year    = {2009}
 }
-
-@inproceedings{5731130,
-  author={Kasparian, F.J. and Beilin, P.E.S. and Turney, D.},
-  booktitle={Digital Avionics Systems Conference, 2003. DASC '03. The 22nd}, 
-  title={Ruggedized PC/104-Plus PowerPC Processor card for avionics}, 
-  year={2003},
-  volume={2},
-  number={},
-  pages={6.C.3-6.1-8 vol.2},
-  keywords={Packaging;Standards;Ceramics;Pins;Power supplies;Glass},
-  doi={10.1109/DASC.2003.1245885}}
