--- a/main.tex
+++ b/main.tex
@@ -763,7 +763,7 @@
 \footmarkstyle{#1.\,}
 
 \providetoggle{useendnotes}
-\settoggle{useendnotes}{true}           %<Set to 'true' if you want to use endnotes
+\settoggle{useendnotes}{false}           %<Set to 'true' if you want to use endnotes
 \iftoggle{useendnotes}{%                % Use the command \pagenote to create endnotes
                                         %   in the running text. They will be collected
                                         %   and printed in a 'Notes' section at the end
